--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onetwotrip",
   "version": "0.0.1",
-  "description": "OneTwoTrip test app",
+  "description": "redis test app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
